@@ -1,10 +1,10 @@
 Begin4
 Title:		hdparm
-Version:	9.53
-Entered-date:	2018-01-05
+Version:	9.54
+Entered-date:	2018-02-03
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.54 partial revert of JMicron changes.
 		v9.53 Read Drive Capacity fixes, SET MAX ADDRESS fixes, fwdownload fixes.
-		v9.52 added JMicron USB-SATA bridge support, courtesy Jan Friesse <jfriesse@gmail.com>.
 		v9.52 added JMicron USB-SATA bridge support, courtesy Jan Friesse <jfriesse@gmail.com>.
 		v9.51 minor fixes/tweaks, new --security-prompt-for-password flag.
 		v9.50 minor fixes for sanitize device stuff.
@@ -128,7 +128,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		137K hdparm-9.53.tar.gz
+		137K hdparm-9.54.tar.gz
 		7K hdparm.lsm
 Platforms:	Linux
 Copying-policy:	BSD License
